# WaveGC

./: README.md  demo.ipynb  main.py  pyproject.toml  train.py
src/configs/: chebnet.yaml  wavegc.yaml
src/configs/dataloader/: full_graph.yaml
src/configs/datasets/: amazon.yaml
src/configs/metrics/: accuracy_masked.yaml
src/configs/model/: chebnet.yaml  simple_gcn.yaml  wavegc.yaml
src/configs/writer/: wandb.yaml
src/datasets/: Pf.py  Ps.py  amazon.py  collate.py  computer.py  data_utils.py
src/layer/: encoders.py  utils.py  waveconv.py  wavegc_layer.py  wavelet_weights.py
src/loss/: __init__.py  cross_entropy.py
src/metrics/: __init__.py  masked_accuracy.py
src/model/: __init__.py  chebnet.py  simple_gcn.py  wavegc.py
src/trainer/: base_trainer.py  trainer.py
src/transforms/: spectral.py  train_mask.py
